security: fix hardcoded JWT secret key
CRITICAL SECURITY FIX:
- Changed hardcoded JWT secret to environment variable
- Added JWT_SECRET_KEY to .env.example
- Updated README with security configuration guide

This fixes TASK-001 from improvement plan.

--- a/dashboard/.env.example
+++ b/dashboard/.env.example
@@ -5,6 +5,7 @@ POSTGRES_PASSWORD=qa_password
 
 # Application
 SECRET_KEY=your-secret-key-change-in-production
+JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
 DATABASE_URL=postgresql+asyncpg://qa_user:qa_password@localhost:5432/qa_framework_db
 
 # Redis
